--- a/Front-End/Image-Converter/src/app/upload-history/upload-history.component.html
+++ b/Front-End/Image-Converter/src/app/upload-history/upload-history.component.html
@@ -7,7 +7,7 @@
     <!-- <h1>Recent Uploads</h1> -->
    <img *ngIf="loading" src="assets/loading.gif" width="400" />
 
-   <div class="w3-row w3-container">
+   <div *ngIf="!loading" class="w3-row w3-container">
     <div *ngFor="let image of uploadedImg;let pImage of uploadedImgProcessed;index as i;">
       <div class="w3-col s4  w3-center w3-padding-large">
         <div class="w3-card-4" >
