register verification UI

--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -159,7 +159,7 @@
                     <div class="shape"></div>
                     <div class="shape"></div>
                 </div>
-                <!--<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                <form id="reg" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                     <table>
                         
                             <h3 id="logo">Register</h3>
@@ -223,7 +223,7 @@
                     <div class="form-group">
                       <button [disabled]="registerForm.invalid" id="loginbtn" class="btn btn-primary">Register</button>
                   </div>      
-                </form>-->
+                </form>
 
                 <!--form to submit code-->
                 <form id="codeForm" [formGroup]="formCode" (ngSubmit)="onSubmitCode()">
