:construction: reset password UI

--- a/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
+++ b/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
@@ -53,6 +53,23 @@
                     Invalid Code!              
                     </p> 
             </form>
+            <!--form to submit new password-->
+            <form id="passForm" [formGroup]="formPass" (ngSubmit)="onSubmitCode()">
+                <h3 id="logo">Image Converter <br>
+                    Password</h3>
+                
+                  <label for="password">Enter New Password</label>
+                    <input type="password" formControlName="password" matInput required>
+                    
+                     <mat-error *ngIf="formPass.get('password')?.touched && formPass.get('password')?.invalid"> 
+                        Password is <strong>required</strong>
+                    </mat-error> 
+                
+                <button id="resetbtn" [disabled]="formPass.get('password')?.invalid" type="submit">Confirm</button>
+                <p *ngIf="buttonReset != '' && !_match" class="alert alert-danger"> 
+                    Invalid Password!              
+                    </p> 
+            </form>
         </div>
     </div>
 </body>
