✨(ts): Graph rendering using ChartJs

--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -23,7 +23,8 @@ body {font-size:16px;}
       <a (click)="toHome()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
       <a (click)="toImageUpload()"  class="w3-bar-item w3-button w3-hover-white">Image Upload</a> 
       <!-- <a (click)="toImageFilter()" class="w3-bar-item w3-button w3-hover-white">Image Filters</a>  -->
-      <a (click)="toConversionFormat()"  class="w3-bar-item w3-button w3-hover-white">Conversion Formats</a> 
+      <a (click)="toConversionFormat()"  class="w3-bar-item w3-button w3-hover-white">Conversion Formats</a>
+      <a (click)="toGraphVis()"  class="w3-bar-item w3-button w3-hover-white">Graphing</a> 
       <a (click)="toUploadHistory()"  class="w3-bar-item w3-button w3-hover-white">Upload History</a> 
       <a (click)="toContact()"  class="w3-bar-item w3-button w3-hover-white">Contact</a>
     </div>
@@ -76,6 +77,10 @@ body {font-size:16px;}
   <!-- Conversion Formats -->
   <div id="conversionFormat">
     <app-conversion></app-conversion>
+  </div>
+  <!-- Graph Visualisation-->
+  <div id="graphVis">
+    <app-graph-vis></app-graph-vis>
   </div>
 <!-- Upload History-->
   <div id="uploadHistory">
