reset password working

--- a/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
+++ b/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
@@ -54,7 +54,7 @@
                     </p> 
             </form>
             <!--form to submit new password-->
-            <form id="passForm" [formGroup]="formPass" (ngSubmit)="onSubmitCode()">
+            <form id="passForm" [formGroup]="formPass" (ngSubmit)="submitPass()">
                 <h3 id="logo">Image Converter <br>
                     Password</h3>
                 
