✨(py): Adding bargraph

--- a/Front-End/Image-Converter/src/app/graph-vis/graph-vis.component.html
+++ b/Front-End/Image-Converter/src/app/graph-vis/graph-vis.component.html
@@ -11,3 +11,27 @@
       </div>
     </div>
   </div>
+
+  <html>
+    <body>
+      
+    
+    
+        <input name="inputb" type="number" id="inputb" value="300000">  
+        <input name="inputa" type="number" id="inputa" value="50000"> 
+     <ul>
+          <li>Total loss of: 
+            <input name="inputc" type="number" id="inputc" value="400000"></li>
+            
+     
+            
+        </ul>
+         
+          <button onclick="graphMe()">Update Graph</button>
+      
+      
+    <div class="graph_container">
+                                <canvas id="Chart1"></canvas>
+                </div>
+    </body>
+    </html>
