--- a/Front-End/Image-Converter/src/app/conversion/conversion.component.html
+++ b/Front-End/Image-Converter/src/app/conversion/conversion.component.html
@@ -2,11 +2,12 @@
 <div class="w3-container" id="conversionFormats" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-black"><b>Conversion Formats</b></h1>
     <hr style="width:50px;border:5px solid black" class="w3-round">
+
     <div class="w3-row w3-container">
         <div class="w3-col s4  w3-center w3-padding-large">
             <div class="w3-card-4" style="">
                 <header class="w3-container w3-blue">
-                  <h1><a (click)="downloadPngFile()">Convert to PNG</a></h1>
+                  <h1>Convert to PNG</h1>
                 </header>
             
                 <div class="w3-container">
@@ -18,7 +19,7 @@
         <div class="w3-col s4  w3-center w3-padding-large">
             <div class="w3-card-4" style="">
                 <header class="w3-container w3-blue">
-                  <h1><a (click)="downloadJpgFile()">Convert to JPG</a></h1>
+                  <h1>Convert to JPG</h1>
                 </header>
             
                 <div class="w3-container">
