--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -81,6 +81,12 @@ body {font-size:16px;}
   <div id="uploadHistory">
     <app-upload-history></app-upload-history>
   </div>
+
+  <!-- <graphing image> -->
+    <div id="graphImg">
+      <app-graphing-input></app-graphing-input>
+    </div>
+
   <!-- Contact -->
   <div id="contact">
     <app-contact></app-contact>
