--- a/Front-End/Image-Converter/src/app/login/login.component.scss
+++ b/Front-End/Image-Converter/src/app/login/login.component.scss
@@ -155,6 +155,9 @@
       border-radius: 5px;
       cursor: pointer;
   }
+  button:disabled {
+    background-color: #666!important;
+  }
   #loginbtn{
       color:#080710;
   }
