:bug: UI feedback display fix

--- a/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
+++ b/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
@@ -27,10 +27,14 @@
                     <label for="Email">Enter your email address</label>
                     <input formControlName="email" placeholder="email@mail.com" matInput required>
                     <!-- mat-error is for validation  -->
-                     <mat-error *ngIf="form.get('email')?.touched && form.get('email')?.invalid"> 
-                email is <strong>required</strong>
-                    </mat-error> 
-  
+                   
+                    <mat-error *ngIf="form.get('email')?.touched && form.get('email')?.hasError('email') && !form.get('email')?.hasError('required')">
+                        Please enter a valid email address
+                      </mat-error>
+                      <mat-error *ngIf="form.get('email')?.touched && form.get('email')?.hasError('required')">
+                        Email is <strong>required</strong>
+                      </mat-error>
+
                 <button id="resetbtn" [disabled]="form.get('email')?.invalid" type="submit">Reset password</button>
                 <p *ngIf="buttonReset != '' && !_match" class="alert alert-danger"> 
                     Invalid Email!              
@@ -44,14 +48,13 @@
                   <label for="code">Enter the 4-digit code we sent to your email address</label>
                     <input formControlName="code" placeholder="####" matInput required>
                     
-                     <mat-error *ngIf="formCode.get('code')?.touched && formCode.get('code')?.invalid"> 
-                Code is <strong>required</strong>
-                    </mat-error> 
-  
+                     <mat-error class="text-danger" *ngIf="formCode.get('code')?.touched && formCode.get('code')?.invalid"> 
+                        Please enter 4 <strong class="text-danger">numeric</strong> digits
+                    </mat-error>
                 <button id="resetbtn" [disabled]="formCode.get('code')?.invalid" type="submit">Confirm</button>
                 <p *ngIf="buttonReset != '' && !_match" class="alert alert-danger"> 
                     Invalid Code!              
-                    </p> 
+                </p> 
             </form>
             <!--form to submit new password-->
             <form id="passForm" [formGroup]="formPass" (ngSubmit)="submitPass()">
