--- a/Front-End/Image-Converter/src/app/graphing-input/graphing-input.component.html
+++ b/Front-End/Image-Converter/src/app/graphing-input/graphing-input.component.html
@@ -1,4 +1,4 @@
-<!-- <link href="https://www.w3schools.com/w3css/4/w3.css">
+<!-- <link href="https://www.w3schools.com/w3css/4/w3.css"> -->
 
 <div class="w3-container" id="graphImg" style="margin-top:75px">
    <h1 class="w3-xxxlarge w3-text-black"><b>Graph Image</b></h1>
@@ -6,35 +6,54 @@
 </div>
 
     <p>unhappy with the image quality? Plot your own graph insted</p>
-
-
-    <img *ngIf="loading" src="assets/loading.gif" width="400" />
-<mat-card *ngIf="!loading" class="card" draggable="true" ngClass="{{ dragAreaClass }}">
-   
-       Drag files here
-                <a href="javascript:void(0)" (click)="file.click()"> or click to open </a>
+    <mat-card>
+      Draw Graph
+      <mat-card-header></mat-card-header>
+      <div mat-card-avatar></div>
+      <img mat-card-image src="assets/drag.png">
       <mat-card-content>
-               
-                <input
-                  type="file"
-                  #file
-                  [multiple]="false"
-                  (change)="onFileChange($event)"
-                  style="display:none"
-                /><br>
+        <!-- <add download button> -->
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-raised-button color="success">Download</button>
+      </mat-card-actions>
+    </mat-card>
 
-                <div class="dragged-files-wrapper" >
-                  
-                  <img mat-card-image id="uploadedImg" src={{displayImg}} alt="Photo of a Shiba Inu">
-                </div>
-                
-        </mat-card-content>
-        <div class="error" *ngIf="error" style = "color:red;">{{error}}</div>
-    <mat-card-actions>
-      <button  [disabled]="isDisabled" (click)="saveFiles()" class="w3-button w3-block w3-padding-large w3-blue w3-margin-bottom">
-        Upload
-      </button>
-    </mat-card-actions>
-  </mat-card>
+    <!-- <form [formGroup]="checkoutForm">
 
+      <button class="button" type="submit">Purchase</button>
+    
+    </form>
+    <form [formGroup]="checkoutForm">
+
+      <button class="button" type="submit">Purchase</button>
+    
+    </form>
+    <form [formGroup]="checkoutForm">
+
+      <button class="button" type="submit">Purchase</button>
+    
+    </form>
+    <form [formGroup]="checkoutForm">
+
+      <button class="button" type="submit">Purchase</button>
+    
+    </form>
+
+    <form [formGroup]="checkoutForm">
+
+      <button class="button" type="submit">Purchase</button>
+    
+    </form>
+
+    <form [formGroup]="checkoutForm">
+
+      <button class="button" type="submit">Purchase</button>
+    
+    </form>
+    <form [formGroup]="checkoutForm">
+
+      <button class="button" type="submit">Purchase</button>
+    
+    </form>
  -->
