--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -23,6 +23,7 @@ body {font-size:16px;}
       <a (click)="toHome()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
       <a (click)="toImageUpload()"  class="w3-bar-item w3-button w3-hover-white">Image Upload</a> 
       <!-- <a (click)="toImageFilter()" class="w3-bar-item w3-button w3-hover-white">Image Filters</a>  -->
+      <!-- <a   class="w3-bar-item w3-button w3-hover-white">Graphing</a> -->
       <a (click)="toConversionFormat()"  class="w3-bar-item w3-button w3-hover-white">Conversion Formats</a>
       <a (click)="toUploadHistory()"  class="w3-bar-item w3-button w3-hover-white">Upload History</a> 
       <a (click)="toContact()"  class="w3-bar-item w3-button w3-hover-white">Contact</a>
@@ -73,6 +74,11 @@ body {font-size:16px;}
     <div id="imageFilter">
       <app-filter></app-filter>
     </div>
+
+    <!-- Graphing -->
+    <!-- <div id="">
+      <app-graphing></app-graphing>
+    </div> -->
   <!-- Conversion Formats -->
   <div id="conversionFormat">
     <app-conversion></app-conversion>
