--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -78,6 +78,10 @@ body {font-size:16px;}
   <div id="conversionFormat">
     <app-conversion></app-conversion>
   </div>
+   <!-- Conversion Formats -->
+   <div id="graphPlotting">
+    <app-graph-plotting></app-graph-plotting>
+  </div>
 <!-- Upload History-->
   <div id="uploadHistory">
     <app-upload-history></app-upload-history>
