--- a/Front-End/Image-Converter/src/app/graph-plotting/graph-plotting.component.html
+++ b/Front-End/Image-Converter/src/app/graph-plotting/graph-plotting.component.html
@@ -1,16 +1,16 @@
-<p>graph-plotting works!</p>
+<br/>
+<h1 class="w3-xxxlarge w3-text-black"><b>Draw graph using Fomula </b></h1>
+    
+<form [formGroup]="form" (ngSubmit)="onFomulaSubmit()">
 
-    <form [formGroup]="form" (ngSubmit)="onFomulaSubmit()">
-        <h3 id="logo">Draw graph using Fomula </h3>
-        
-            <label for="formula">Fomula</label>
-            <input formControlName="formula" placeholder="Email" matInput required>
-            <!-- mat-error is for validation  -->
-                <!--<mat-error *ngIf="form.get('username')?.touched && form.get('username')?.invalid"> 
-        email is <strong>required</strong>
-            </mat-error> -->
+        <label for="formula">Fomula</label>
+        <input formControlName="formula" placeholder="Email" matInput required>
+        <!-- mat-error is for validation  -->
+            <!--<mat-error *ngIf="form.get('username')?.touched && form.get('username')?.invalid"> 
+    email is <strong>required</strong>
+        </mat-error> -->
 
 
-        <button id="loginbtn" [disabled]="form.get('username')?.invalid || form.get('password')?.invalid" type="submit">Log In</button>
-        <img mat-card-image id="uploadedImg" src={{displayImg}} alt="graph">
-    </form>
+    <button id="drawbtn" [disabled]="form.get('username')?.invalid || form.get('password')?.invalid" type="submit" class="w3-button w3-block w3-padding-large w3-blue w3-margin-bottom">Draw</button>
+    <img mat-card-image id="graphImg" src={{displayImg}} alt="graph" >
+</form>
