--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -24,6 +24,7 @@ body {font-size:16px;}
       <a (click)="toImageUpload()"  class="w3-bar-item w3-button w3-hover-white">Image Upload</a> 
       <!-- <a (click)="toImageFilter()" class="w3-bar-item w3-button w3-hover-white">Image Filters</a>  -->
       <a (click)="toConversionFormat()"  class="w3-bar-item w3-button w3-hover-white">Conversion Formats</a> 
+      <a (click)="toGraphing()"  class="w3-bar-item w3-button w3-hover-white">Graphing</a>
       <a (click)="toUploadHistory()"  class="w3-bar-item w3-button w3-hover-white">Upload History</a> 
       <a (click)="toContact()"  class="w3-bar-item w3-button w3-hover-white">Contact</a>
       <a (click)="logout()"  class="w3-bar-item w3-button w3-hover-white">Logout</a>
@@ -78,7 +79,7 @@ body {font-size:16px;}
   <div id="conversionFormat">
     <app-conversion></app-conversion>
   </div>
-   <!-- Conversion Formats -->
+   <!-- Graphing -->
    <div id="graphPlotting">
     <app-graph-plotting></app-graph-plotting>
   </div>
