:lipstick: confirm password functionality

--- a/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
+++ b/Front-End/Image-Converter/src/app/forgot-password/forgot-password.component.html
@@ -62,13 +62,24 @@
                     Password</h3>
                 
                   <label for="password">Enter New Password</label>
-                    <input type="password" formControlName="password" matInput required>
+                    <input type="password" formControlName="password" placeholder="Password" [ngClass]="{ 'is-invalid': formPass.get('password')?.touched && formPass.controls.password.errors }" required/>
+                   
+                    <div *ngIf="formPass.get('password')?.touched && formPass.controls.password.errors" class="text-danger">
+                        <div *ngIf="formPass.controls.password.errors.required">Enter password again</div>
+                        <div *ngIf="formPass.controls.password.errors.minlength">Password must be </div>
+                        <div *ngIf="formPass.controls.password.errors.minlength">at least 8 characters</div>                                         
+                    </div>
+
+                    <label for="cpassword">Confirm Password</label>
+                    <input type="password" formControlName="cpassword"  placeholder="Password" [ngClass]="{ 'is-invalid': formPass.get('cpassword')?.touched && formPass.controls.cpassword.errors }" required />
+                    <div *ngIf="formPass.get('cpassword')?.touched && formPass.controls.cpassword.errors" class="text-danger">
+                      <div *ngIf="formPass.controls.cpassword.errors.required">Enter password again</div>
+                      <div *ngIf="formPass.controls.cpassword.errors.minlength">Password must be </div>
+                      <div *ngIf="formPass.controls.cpassword.errors.minlength">at least 8 characters</div>
+                      <div *ngIf="formPass.controls.cpassword.errors.MustMatch">Password is not the same</div>                                         
+                    </div>
                     
-                     <mat-error *ngIf="formPass.get('password')?.touched && formPass.get('password')?.invalid"> 
-                        Password is <strong>required</strong>
-                    </mat-error> 
-                
-                <button id="resetbtn" [disabled]="formPass.get('password')?.invalid" type="submit">Confirm</button>
+                <button id="resetbtn" [disabled]=" formPass.get('cpassword')?.invalid" type="submit">Confirm</button>
                 <p *ngIf="buttonReset != '' && !_match" class="alert alert-danger"> 
                     Invalid Password!              
                     </p> 
