--- a/Front-End/Image-Converter/src/app/converter/converter.component.scss
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.scss
@@ -1,7 +1,8 @@
-.card {
+#uploadcard {
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
+    background-color: #333333;
   }
   #uploadedImg{
     max-height: 40%;
