--- a/Front-End/Image-Converter/src/app/conversion/conversion.component.html
+++ b/Front-End/Image-Converter/src/app/conversion/conversion.component.html
@@ -7,7 +7,7 @@
         <div class="w3-col s4  w3-center w3-padding-large">
             <div class="w3-card-4" style="">
                 <header class="w3-container w3-blue">
-                  <h1>Convert to PNG</h1>
+                  <h1><a (click)="downloadPngFile()">Convert to PNG</a></h1>
                 </header>
             
                 <div class="w3-container">
@@ -19,11 +19,12 @@
         <div class="w3-col s4  w3-center w3-padding-large">
             <div class="w3-card-4" style="">
                 <header class="w3-container w3-blue">
-                  <h1>Convert to JPG</h1>
+                  <h1><a (click)="downloadJpgFile()">Convert to JPG</a></h1>
                 </header>
             
                 <div class="w3-container">
                   <p>Convert image to JPG format</p>
+                  
                 </div>
             </div>
         </div>
