:lipstick: minor UI fix

--- a/Front-End/Image-Converter/src/app/conversion/conversion.component.html
+++ b/Front-End/Image-Converter/src/app/conversion/conversion.component.html
@@ -1,5 +1,5 @@
 <!-- Conversion Formats -->
-<div class="w3-container" id="conversionFormats" style="margin-top:75px">
+<div class="w3-container" id="conversionFormats" style="margin-top:75px" *ngIf=dispBool>
     <h1 class="w3-xxxlarge w3-text-black"><b>Conversion Formats</b></h1>
     <hr style="width:50px;border:5px solid black" class="w3-round">
 
@@ -11,7 +11,7 @@
                 </header>
             
                 <div class="w3-container">
-                  <p>Convert image to PNG format
+                  <p>Convert processed image to PNG format
                   </p>
                 </div>
             </div>
@@ -23,12 +23,12 @@
                 </header>
             
                 <div class="w3-container">
-                  <p>Convert image to JPG format</p>
+                  <p>Convert processed image to JPG format</p>
                   
                 </div>
             </div>
         </div>
-        <div class="w3-col s4  w3-center w3-padding-large">
+        <!--<div class="w3-col s4  w3-center w3-padding-large">
             <div class="w3-card-4" style="">
                 <header class="w3-container w3-blue">
                   <h1>Convert to SVG</h1>
@@ -38,7 +38,7 @@
                   <p>Convert image to SVG format</p>
                 </div>
             </div>
-        </div>
+        </div>-->
       </div>
       
       
