:lipstick: UI image display height change

--- a/Front-End/Image-Converter/src/app/upload-history/upload-history.component.html
+++ b/Front-End/Image-Converter/src/app/upload-history/upload-history.component.html
@@ -13,7 +13,7 @@
         <div class="w3-card-4" >
           <div id="uploaded">
             <button (click)="imageClick(i,'uploaded')">
-              <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="200" >
+              <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="200" height="200">
             </button>
            </div>
         </div>
