--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -5,8 +5,9 @@
         <mat-card-title>Shiba Inu</mat-card-title>
         <mat-card-subtitle>Dog Breed</mat-card-subtitle>
       </mat-card-header>-->
-       Drag files here
+              <span id="drag">Drag files here
                 <a href="javascript:void(0)" (click)="file.click()"> or click to open </a>
+              </span>
       <mat-card-content>
                
                 <input
