minor change (place holder)

--- a/Front-End/Image-Converter/src/app/graph-plotting/graph-plotting.component.html
+++ b/Front-End/Image-Converter/src/app/graph-plotting/graph-plotting.component.html
@@ -6,7 +6,7 @@
 
             <label for="formula">Enter formulae below</label>
             <div>
-            <input formControlName="formula" placeholder="Email" matInput required>
+            <input formControlName="formula" placeholder="" matInput required>
             <!-- mat-error is for validation  -->
                 <!--<mat-error *ngIf="form.get('username')?.touched && form.get('username')?.invalid"> 
         email is <strong>required</strong>
