:lipstick: minor UI changes

--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -23,7 +23,7 @@ body {font-size:16px;}
       <div>  
         <div class="w3-container w3-cell">
             <img id="imgLink" src={{message.image}} alt="response img" width="400" height="400"><br/>
-            <p>{{message.graphType}}</p>
+            <p><b>{{message.graphType}}</b></p>
         </div>
           <div class="w3-container w3-cell">
             <div class="w3-panel" style="width:100%">
