--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -85,8 +85,11 @@ body {font-size:16px;}
     <app-conversion></app-conversion>
   </div>
    <!-- Graphing -->
-   <div id="graphPlotting">
+   <!-- <div id="graphPlotting">
     <app-graph-plotting></app-graph-plotting>
+  </div> -->
+  <div id="graphPlotting">
+    <app-live-graphing></app-live-graphing>
   </div>
 <!-- Upload History-->
   <div id="uploadHistory">
