--- a/Front-End/Image-Converter/src/app/live-graphing/live-graphing.component.html
+++ b/Front-End/Image-Converter/src/app/live-graphing/live-graphing.component.html
@@ -1,32 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
 
-  <!-- <script src="https://www.desmos.com/api/v1.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script> -->
-
-    
-    
-  <style>
-    #screenshot-button {
-      margin: 10px 0;
-      display: block;
-      font-size: 13px;
-      cursor: pointer;
-    }
-    #screenshot-container {
-      margin-top: 10px;
-    }
-
-  </style>
-</head>
-
-<body>
-    
-    <script src="https://www.desmos.com/api/v1.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
-    
   <div id="calculator" style="width: 600px; height: 400px;"></div>
   
   <button id="screenshot-button">Capture Screenshot</button>
@@ -47,7 +19,7 @@
 
   </div>
 
-  <script >
+  <!--<script >
     var calcElt = document.getElementById('calculator');
     var calculator = Desmos.GraphingCalculator(calcElt);
     calculator.setExpression({latex: 'x^2+y^2=10'});
@@ -69,7 +41,5 @@
 
       containerElt.style.display = 'block';
     }
-  </script>
-  
-</body>
-</html>
+  </script>-->
+ 
