--- a/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
+++ b/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
@@ -1,1 +1,23 @@
-<p>unrecognized-images works!</p>
+<link href="https://www.w3schools.com/w3css/4/w3.css">
+
+<div class="w3-container" id="uploadHistory" style="margin-top:75px">
+   <h1 class="w3-xxxlarge w3-text-black"><b>Upload History</b></h1>
+   <hr style="width:50px;border:5px solid black" class="w3-round">
+
+    <!-- <h1>Recent Uploads</h1> -->
+   <img *ngIf="loading" src="assets/loading.gif" width="400" />
+
+   <div *ngIf="!loading" class="w3-row w3-container">
+    <div *ngFor="let image of uploadedImg;let pImage of uploadedImgProcessed;index as i;">
+      <div class="w3-col s4  w3-center w3-padding-large">
+        <div class="w3-card-4" >
+          <div id="uploaded">
+              <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="200" height="200">
+           </div>
+        </div>
+      </div> 
+    </div>
+   </div>
+</div>
+
+
