Unrecognized images working

--- a/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
+++ b/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
@@ -12,7 +12,9 @@
       <div class="w3-col s4  w3-center w3-padding-large">
         <div class="w3-card-4" >
           <div id="uploaded">
-              <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="200" height="200">
+            <button (click)="imageClick(i,'uploaded')">
+                <img id="imgLink" src={{uploadedImg[i]}} alt="response img" width="200" height="200">
+              </button>
            </div>
         </div>
       </div> 
