desmos graphing system

--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -76,17 +76,18 @@ body {font-size:16px;}
       <app-filter></app-filter>
     </div>
 
-    <!-- Graphing -->
-    <!-- <div id="">
-      <app-graphing></app-graphing>
-    </div> -->
+   
   <!-- Conversion Formats -->
   <div id="conversionFormat">
     <app-conversion></app-conversion>
   </div>
    <!-- Graphing -->
-   <div id="graphPlotting">
+   <!-- <div id="graphPlotting">
     <app-graph-plotting></app-graph-plotting>
+  </div> -->
+   <!-- Graphing -->
+   <div id="livegraphing">
+    <app-live-graphing2></app-live-graphing2>
   </div>
 <!-- Upload History-->
   <div id="uploadHistory">
