--- a/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.html
+++ b/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.html
@@ -43,7 +43,7 @@
 
 <div id="calculator" style="width: 800px; height: 400px;"></div>
 
-<button id="screenshot-button" (click) ="captureScreenshots()">Capture Screenshot</button>
+<button id="screenshot-button" (click) ="captureScreenshots()">Save Graph</button>
 
 <div id="screenshot-container" style="display: none;">
     <table>
