--- a/Front-End/Image-Converter/src/app/filter/filter.component.html
+++ b/Front-End/Image-Converter/src/app/filter/filter.component.html
@@ -45,6 +45,7 @@ body {font-size:16px;}
       </div> 
       <div class="w3-panel" style="width:15%">
         <a id='dwnldLnk' download='output.png' style="display:none;" ></a>
+        <a id='dwnldLnk2' download='output.jpg' style="display:none;" ></a>
         <button class="w3-button w3-round w3-block w3-black" (click)="downloadFile()">Download</button>
         <div >
           <canvas id="myCanvas" ></canvas>
