--- a/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
+++ b/Front-End/Image-Converter/src/app/dashboard/dashboard.component.html
@@ -102,6 +102,11 @@ body {font-size:16px;}
   <div id="unrecognizedImg">
     <app-unrecognized-images></app-unrecognized-images>
   </div>
+
+  <!-- Admin Tracker -->
+  <div id="adminTracker">
+    <app-tracker></app-tracker>
+  </div>
 <!-- End page content -->
 </div>
 
