--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
@@ -446,7 +446,7 @@
   .hero {
     width: 100%;
     height: 100vh;
-    background: url(../img/hero-bg.png) top center no-repeat;
+    // background: url(./assets/img/hero-bg.png) top center no-repeat;
     background-size: cover;
   }
   
@@ -1426,7 +1426,7 @@
     bottom: 0;
     height: 100%;
     width: 100%;
-    background: url(../img/team-shape.svg) no-repeat center bottom;
+    // background: url(../img/team-shape.svg) no-repeat center bottom;
     background-size: contain;
     z-index: 1;
   }
@@ -2286,7 +2286,7 @@
   }
   
   .footer .footer-top {
-    background: white url(../img/footer-bg.png) no-repeat right top;
+    // background: white url(../img/footer-bg.png) no-repeat right top;
     background-size: contain;
     border-top: 1px solid #e1ecff;
     border-bottom: 1px solid #e1ecff;
