--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
@@ -208,6 +208,7 @@
   */
   .navbar {
     padding: 0;
+    background-color: #333333;
   }
   
   .navbar ul {
@@ -446,7 +447,7 @@
   .hero {
     width: 100%;
     height: 100vh;
-    // background: url(./assets/img/hero-bg.png) top center no-repeat;
+    // background: url(../img/hero-bg.png) top center no-repeat;
     background-size: cover;
   }
   
