--- a/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
+++ b/Front-End/Image-Converter/src/app/landing-page/landing-page.component.scss
@@ -195,7 +195,7 @@
     font-size: 30px;
     font-weight: 700;
     letter-spacing: 1px;
-    color: #012970;
+    color: #333333;
     font-family: "Nunito", sans-serif;
     margin-top: 3px;
   }
@@ -208,7 +208,7 @@
   */
   .navbar {
     padding: 0;
-    background-color: #333333;
+    
   }
   
   .navbar ul {
@@ -232,7 +232,7 @@
     font-family: "Nunito", sans-serif;
     font-size: 16px;
     font-weight: 700;
-    color: #013289;
+    color: #333333;
     white-space: nowrap;
     transition: 0.3s;
   }
@@ -248,12 +248,12 @@
   .navbar .active,
   .navbar .active:focus,
   .navbar li:hover>a {
-    color: #4154f1;
+    color: #333333;
   }
   
   .navbar .getstarted,
   .navbar .getstarted:focus {
-    background: #4154f1;
+    background: #333333;
     padding: 8px 20px;
     margin-left: 30px;
     border-radius: 4px;
@@ -453,9 +453,9 @@
   
   .hero h1 {
     margin: 0;
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 700;
-    color: #012970;
+    color: #333333;
   }
   
   .hero h2 {
@@ -471,8 +471,8 @@
     border-radius: 4px;
     transition: 0.5s;
     color: #fff;
-    background: #4154f1;
-    box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
+    background: #333333;
+    box-shadow: 0px 5px 30px rgba(59, 65, 119, 0.4);
   }
   
   .hero .btn-get-started span {
