:bug: converter component minor UI fix

--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -1,10 +1,10 @@
-<img *ngIf="loading" src="assets/loading.gif" width="400" />
+<div class="w3-container" id="uploadHistory" style="margin-top:5px">
+  <h1 class="w3-xxxlarge w3-text-black"><b>Upload image</b></h1>
+  <hr style="width:50px;border:5px solid black" class="w3-round">
+</div>
+<img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/>
 <mat-card id="uploadcard" *ngIf="!loading" class="card" draggable="true" ngClass="{{ dragAreaClass }}">
-    <!--<mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-      </mat-card-header>-->
+
               <span id="drag">Drag files here
                 <a href="javascript:void(0)" (click)="file.click()"> or click to open </a>
               </span>
@@ -33,3 +33,11 @@
       </button>
     </mat-card-actions>
   </mat-card>
+    <!-- Image Filters -->
+    <div id="imageFilter">
+      <app-filter></app-filter>
+   </div>
+   <!-- Conversion Formats -->
+   <div id="conversionFormat">
+     <app-conversion></app-conversion>
+   </div>
